tocにレベル4見出しまで表示するように変更

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -603,7 +603,7 @@ ul.breadcrumbs {
   background-color: #ECEAF7;
 }
 
-#TableOfContents ul ul ul {
+#TableOfContents ul ul ul ul ul {
   display: none;
 }
 
