--- a/layouts/search_result/single.html
+++ b/layouts/search_result/single.html
@@ -9,7 +9,7 @@
             <div class="breadcrumb">
               {{- partial "breadcrumb" . -}}
             </div>
-                <h1>{{ .Title }}</h1>
+                <h1>{{ partial "title" . }}</h1>
                     <div id="searchResultContainer">
          　　　    　<div class="mf_finder_container">
                             <mf-search-box ajax-url="//mf2ap001.marsflag.com/cybozu__support__help/x_search.x"
