--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -17,7 +17,7 @@
 	{{- range . -}}
       {{- if in .Params.disabled $.Site.Params.TargetRegion -}}
       {{- else -}}
-	<li><a href="{{ .RelPermalink }}">{{- .Title -}}</a></li>
+	<li><a href="{{ .RelPermalink }}">{{ partial "title" . }}</a></li>
       {{- end -}}
 	{{- end -}}
 </ul>
