--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -15,12 +15,12 @@
     <div class="article">
         <div class="wrapper"> 
             <div class="breadcrumb">{{- partial "breadcrumb" . -}}</div>
-            <h1>{{- .Title }}</h1>
+            <h1>{{ partial "title" . }}</h1>
             <ul id="list">
                 {{- range .Data.Pages.ByWeight  }}
                     {{- if in .Params.disabled $.Site.Params.TargetRegion }}
                     {{- else }}
-                <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+                <li><a href="{{ .RelPermalink }}">{{ partial "title" . }}</a></li>
                     {{- end }}
                 {{- end }}
             </ul>
