--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -416,6 +416,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .article table th{min-width:100px;text-align:left;}
 /*.article table td,.article table th{padding:12px 16px;vertical-align:top}*/
 .article blockquote{padding-left:16px}
+.article caption{text-align: left; font-weight: bold;}
 /*.article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
 .article .data table{display:inline-block;margin:0 16px;text-align:left}*/
 .article .screenchot {
