表項目の最低幅の指定を削除

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -413,7 +413,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .article pre{padding:16px;margin:1.5em -16px 0;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}
 .article table{margin:3em 0 1.5em;overflow:hidden;}
 /*.no-js .article table{display:inline-block;max-width:100%;overflow:auto;-webkit-overflow-scrolling:touch}*/
-.article table th{min-width:100px;text-align:left;}
+.article table th{text-align:left;}
 /*.article table td,.article table th{padding:12px 16px;vertical-align:top}*/
 .article blockquote{padding-left:16px}
 .article caption{text-align: left; font-weight: bold;}
