--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -302,6 +302,9 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 /*.article a:focus,.article a:hover{color:#00bfa5}*/
 /*.article .headerlink{color:rgba(0,0,0,.26);border:none}*/
 /*.article table{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);border-radius:3px}*/
+.article .wrapTable {
+  overflow: auto;
+}
 .article table {
   border-collapse: collapse;
   border-left: 1px solid #ECEAF7;
