--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,59 +22,59 @@
 
     <meta property="og:url" content="{{ .Permalink }}">
     {{ with .Site.Title }}<meta property="og:title" content="{{ . }}">{{ end }}
-    {{ with .Site.Params.logo }}<meta property="og:image" content="{{ . | absURL }}">{{ end }}
+    {{ with .Site.Params.logo }}<meta property="og:image" content="{{ . | relURL }}">{{ end }}
     {{ with .Site.Title }}<meta name="apple-mobile-web-app-title" content="{{ . }}">{{ end }}
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="shortcut icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | absURL }}{{ else }}{{ "favicon.ico" | absURL }}{{ end }}">
-    <link rel="icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | absURL }}{{ else }}{{ "favicon.ico" | absURL }}{{ end }}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | relURL }}{{ else }}{{ "favicon.ico" | relURL }}{{ end }}">
+    <link rel="icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | relURL }}{{ else }}{{ "favicon.ico" | relURL }}{{ end }}">
 
 <!--     <style>
       @font-face {
         font-family: 'Icon';
-        src: url('{{ "fonts/icon.eot?52m981" | absURL }}');
-        src: url('{{ "fonts/icon.eot?#iefix52m981" | absURL }}')
+        src: url('{{ "fonts/icon.eot?52m981" | relURL }}');
+        src: url('{{ "fonts/icon.eot?#iefix52m981" | relURL }}')
                format('embedded-opentype'),
-             url('{{ "fonts/icon.woff?52m981" | absURL }}')
+             url('{{ "fonts/icon.woff?52m981" | relURL }}')
                format('woff'),
-             url('{{ "fonts/icon.ttf?52m981" | absURL }}')
+             url('{{ "fonts/icon.ttf?52m981" | relURL }}')
                format('truetype'),
-             url('{{ "fonts/icon.svg?52m981#icon" | absURL }}')
+             url('{{ "fonts/icon.svg?52m981#icon" | relURL }}')
                format('svg');
         font-weight: normal;
         font-style: normal;
       }
     </style> -->
 
-    <link rel="stylesheet" href="{{ "stylesheets/application.css" | absURL }}">
-    <link rel="stylesheet" href="{{ "stylesheets/temporary.css" | absURL }}">
-    <link rel="stylesheet" href="{{ "stylesheets/palettes.css" | absURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/application.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/temporary.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/palettes.css" | relURL }}">
 
-    <link rel="stylesheet" href="{{ with .Site.Params.highlight_css }}{{ . | absURL }}{{ else }}{{ "stylesheets/highlight/highlight.css" | absURL }}{{ end }}">
+    <link rel="stylesheet" href="{{ with .Site.Params.highlight_css }}{{ . | relURL }}{{ else }}{{ "stylesheets/highlight/highlight.css" | relURL }}{{ end }}">
 
-    <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | absURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | relURL }}">
 
-    <link rel="stylesheet" href="{{ "stylesheets/custom.css" | absURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/custom.css" | relURL }}">
 
     <link href="//js.cybozu.com/font-awesome/v5.0.9/css/fontawesome-all.min.css" rel="stylesheet">
 
     {{if .IsHome}}
-    <link rel="stylesheet" href="{{ "stylesheets/home.css" | absURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/home.css" | relURL }}">
     {{end}}
 
     {{if eq .Params.type "search_result"}}
     <link href="//c.marsflag.com/mf/mfx/css/mfx-serp.css" rel="stylesheet" type="text/css" media="all" charset="UTF-8">
-    <link rel="stylesheet" href="{{ "stylesheets/search_result.css" | absURL }}">
+    <link rel="stylesheet" href="{{ "stylesheets/search_result.css" | relURL }}">
     {{end}}
 
-    <script src="{{ "javascripts/modernizr.js" | absURL }}"></script>
+    <script src="{{ "javascripts/modernizr.js" | relURL }}"></script>
     <script src="https://js.cybozu.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="{{ "javascripts/js.cookie.js" | absURL }}"></script>
-    <script src="{{ "javascripts/jquery.cookie.js" | absURL }}"></script>
-    <script src="{{ "javascripts/transition.min.js" | absURL }}"></script>
-    <script src="{{ "javascripts/zoom.js" | absURL }}"></script>
-    <script src="{{ "javascripts/custom.js" | absURL }}"></script>
+    <script src="{{ "javascripts/js.cookie.js" | relURL }}"></script>
+    <script src="{{ "javascripts/jquery.cookie.js" | relURL }}"></script>
+    <script src="{{ "javascripts/transition.min.js" | relURL }}"></script>
+    <script src="{{ "javascripts/zoom.js" | relURL }}"></script>
+    <script src="{{ "javascripts/custom.js" | relURL }}"></script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
