--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -293,15 +293,13 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 /*.copyright a{-webkit-transition:color .25s;transition:color .25s}*/
 /*.ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 0);background:linear-gradient(180deg,#fff 50%,#e84e40 0)}
 .ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 0);background:linear-gradient(180deg,#fff 50%,#fff 0)}*/
-.article a {color: #0D8199}
+.article a, .nfarticle a {
+  color: #0D8199;
+  border-bottom:1px dotted;
+}
 /*.article h1,.article h2{color:#e84e40}*/
 .article code{background:#eee}
 .article kbd{color:#555;background-color:#fcfcfc;border:1px solid #ccc;border-bottom-color:#bbb;border-radius:3px;box-shadow:inset 0 -1px 0 #bbb}
-/*.article h1{border-bottom:1px solid rgba(0,0,0,.12)}*/
-.article a{border-bottom:1px dotted}
-/*.article a:focus,.article a:hover{color:#00bfa5}*/
-/*.article .headerlink{color:rgba(0,0,0,.26);border:none}*/
-/*.article table{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);border-radius:3px}*/
 .article .wrapTable {
   overflow: auto;
 }
@@ -785,6 +783,12 @@ ul.breadcrumbs {
 
 .seealso {
     font-size: 1em;
+}
+
+.nfarticle .nftitle{
+  font-size: 3rem;
+  line-height: 1.5;
+  margin: 30px 0;
 }
 
 /*@media only screen and (min-width:960px){
