アンケートと検索のリンク切れを修正

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -30,7 +30,7 @@
     </div>
   </form>
 </aside>
-<script src="/javascripts/enquete.js"></script>
+<script src="{{ "javascripts/enquete.js" | relURL }}"></script>
 <script>
 document.getElementById("enqueteForm").action="https://formcreator.jp/answer.php/screens/enquete_from_external_site?key=pDgJI91lHBlbFjGvfIKRhw%3D%3D";
 </script>
