--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -70,7 +70,7 @@
 
     <script src="{{ "javascripts/modernizr.js" | relURL }}"></script>
     <script src="https://js.cybozu.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="{{ "javascripts/js.cookie.js" | relURL }}"></script>
+    <!-- <script src="{{ "javascripts/js.cookie.js" | relURL }}"></script> -->
     <script src="{{ "javascripts/jquery.cookie.js" | relURL }}"></script>
     <script src="{{ "javascripts/transition.min.js" | relURL }}"></script>
     <script src="{{ "javascripts/zoom.js" | relURL }}"></script>
@@ -81,7 +81,7 @@
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-5ZR5GF');</script>
-      
+
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
