--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -302,19 +302,27 @@ body{position:relative;min-height:calc(100% - 56px);}
 }
 .footer a{border:none}
 .footer .wrapper {
-  display: flex;
+/*  display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center;*/
   max-width: 1300px;
   height: 92px;
   margin-left: auto;
   margin-right: auto;
-  padding: 9px;
+  padding: 21px 9px 0 9px;
 }
-#footerlinks {display:flex;padding-left: 20px;}
+#footerlinks {
+  display:flex;
+  padding-right: 21px;
+  padding-bottom: 9px;
+  float: left;
+}
 #footerlinks ul li {display: inline-block; margin-right: 1em;}
-#footerlinks a{padding-right: 0.3em;border-bottom: 1px dotted;}
-#footercopyright {padding-left: 20px;}
+#footerlinks a{padding-right: 0.3em;border-bottom: 1px dotted;line-height: 2em;}
+#footercopyright {
+  /*padding-left: 20px;*/
+  float: right;
+}
 
 .results {
   display: none;
@@ -423,7 +431,7 @@ ul.breadcrumbs {
 #mainmenu i.expand{
     transform: rotate(90deg);
 }
-.taglist {
+/*.taglist {
     padding: 5px;
     margin-left: 20px;
     width: 220px;
@@ -452,7 +460,7 @@ ul.breadcrumbs {
 
 .tagnumber {
     padding-left: 1px;
-}
+}*/
 .referrence h1{font-size:1.5rem;font-weight: normal;margin-bottom: 12px;}
 .referrence {
   margin-top: 72px;
@@ -538,14 +546,13 @@ ul.breadcrumbs {
     #langselector{display:none;}
     #enquete{position:absolute !important;}
     .footer { display: block; }
-    #footercenter {flex-direction: column;}
-    #footercopyright {padding-top: 15px; width: 100%;}
+    /*#footercenter {flex-direction: column;}*/
 }
 @media only screen and (min-width:960px) {
     .main { flex-direction: row; }
     .article { width: 820px; margin-left: 280px;}
     .drawer { width: 280px; position:fixed; padding-bottom: 100px}
-
+}
 @media only screen and (max-width:959px) {
     .main { flex-direction: column-reverse; flex-wrap: wrap;}
     .article { background-color: #ffffff;}
@@ -554,9 +561,10 @@ ul.breadcrumbs {
     .searchbox {
       width: 350px;
     }
+    #footercopyright {float: left;}
 }
 
-@media only screen and (max-width:1100px) {
+@media only screen and (max-width:1300px) {
   #sidebar-toc { display: none;}
 }
 
