言語選択の有効無効の設定を追加

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
       </form>
     </div>
   {{end}}
-  {{if .IsTranslated}}
+  {{if and .IsTranslated (eq .Site.Params.langSelector true) }}
   <div id="langselector">{{ partial "langselector" . }}</div>
   {{end}}
 </nav>
