--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -59,23 +59,23 @@ pre,pre code{color:rgba(0,0,0,.87)}
   -webkit-align-items: center;
   align-items: center;
 }
-.header-logo-base{
+.header .header-logo-base{
   width: 300px;
   height: 100%;
-  padding:7px;
+  padding:9px;
   margin-right: 15px;
 }
-.header-logo{
+.header .header-logo{
   display: -webkit-flex;
   display: flex;
   width: 100%;
   height: 100%;
 }
-.header-img{
+.header .header-img{
   max-width: 100%;
   max-height: 100%;
 }
-.searchbox {
+.header .searchbox {
   width: 500px;
   height: 36px;
   border: 1px solid #e6e6e6;
@@ -88,7 +88,7 @@ pre,pre code{color:rgba(0,0,0,.87)}
   align-items: center;
   margin-left: auto;
 }
-.searchbox .fa-search {
+.header .fa-search {
   margin-left: 12px;
   font-size: 120%;
 }
@@ -481,7 +481,7 @@ ul.breadcrumbs {
   width: 400px;
 }
 .main {
-  padding: 12px 0 120px;
+  padding: 12px 0 92px;
   width: 100%;
   position: relative;
   overflow: hidden;
@@ -546,6 +546,12 @@ ul.breadcrumbs {
     #langselector{display:none;}
     #enquete{position:absolute !important;}
     .footer { display: block; }
+    .searchbox {
+      width: 350px;
+    }
+    .header-logo-base {
+      width: 200px;
+    }
     /*#footercenter {flex-direction: column;}*/
 }
 @media only screen and (min-width:960px) {
@@ -558,9 +564,6 @@ ul.breadcrumbs {
     .article { background-color: #ffffff;}
     .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #f6f6f6; z-index: 1;}
     .previous, .next{display: none;}
-    .searchbox {
-      width: 350px;
-    }
     #footercopyright {float: left;}
 }
 
