トップページに雲を追加

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,7 @@
     <header class="header">
         {{ partial "header" . }}
     </header>
+    <div class="hero" style="background-image: url('{{ "images/hero_common.png" | relURL}}');"></div>
     <main class="main">
         <article class="article" >
             <div class="wrapper">
