--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -555,12 +555,12 @@ ul.breadcrumbs {
     /*#footercenter {flex-direction: column;}*/
 }
 @media only screen and (min-width:960px) {
-    /*.main { flex-direction: row; }*/
+    .main { flex-direction: row; }
     .article { width: 820px; margin-left: 280px;}
     .drawer { width: 280px; position:fixed; padding-bottom: 100px}
 }
 @media only screen and (max-width:959px) {
-    /*.main { flex-direction: column-reverse; flex-wrap: wrap;}*/
+    .main { flex-direction: column-reverse; flex-wrap: wrap;}
     /*.article { background-color: #ffffff;}*/
     .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #f6f6f6; z-index: 1;}
     .previous, .next{display: none;}
