--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -50,12 +50,18 @@
   flex: 1;
   flex-wrap: wrap;
 }*/
+.col-flex {
+  margin-top:72px;
+}
 .col-flex:after {
   content: "";
   clear: both;
   display: block;
 }
-
+.col-flex *:first-child {
+  padding-top: 0;
+  margin-top: 0;
+}
 .article .col-logo {
   display: block;
   width: 210px;
