--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -58,7 +58,7 @@
   clear: both;
   display: block;
 }
-.col-flex *:first-child {
+.col-flex > *:first-child {
   padding-top: 0;
   margin-top: 0;
 }
